# openscada

./: AUTHORS  CMakeLists.txt  ChangeLog  I18N.am  I18N.mk  Makefile  Makefile.am  Makefile.in  NEWS  OpenScada.spec  README  README_WIN  README_ru  README_uk  TODO  TODO_ru  TODO_uk  acconfig.h  acinclude.m4  aclocal.m4  autotools.txt  clean_tree  config.cache  config.h  config.h.in  config.status  configure  configure.ac  configure.in  configure.scan  configure_win  libtool  ltmain.sh  mkdist  openscada.kateproject  openscada.pc.in  openscada.spec  openscada_mod.spec  oscada.init  oscada.xml  (+1 more)
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.am_work  Makefile.in  autohd.h  main.cpp  resalloc.cpp  resalloc.h  tapplication.cpp  tapplication.h  tarchives.cpp  tarchives.h  tarchval.cpp  tarchval.h  tarhive.cpp  tarhive.h  tarhives.cpp  tarhives.h  tbd.cpp  tbd.h  tbds.cpp  tbds.h  tcntrnode.cpp  tcntrnode.h  tconfig.cpp  tconfig.h  tconfigelem.cpp  tconfigelem.h  tcontr.cpp  tcontr.h  tcontroller.cpp  tcontroller.h  tcontrollers.cpp  tcontrollers.h  tdaqs.cpp  tdaqs.h  telem.cpp  telem.h  terror.cpp  (+72 more)
src/moduls/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
src/moduls/arhiv/: Makefile  Makefile.am  Makefile.in  base.cpp  base.h  test_arhiv.cpp  test_arhiv.h
src/moduls/arhiv/=Tmpl=/: Makefile.am  configure.ac  configure.in  mess.cpp  mess.h  mod_tmpl.cpp  mod_tmpl.h  module.cpp  module.h  val.cpp  val.h
src/moduls/arhiv/BaseArh/: Makefile.am  Makefile.in  base.cpp  base.h  mess.cpp  mess.h  val.cpp  val.h
src/moduls/arhiv/DBArch/: Makefile.am  Makefile.in  arch.cpp  arch.h  mess.cpp  mess.h  val.cpp  val.h
src/moduls/arhiv/FSArch/: Makefile.am  Makefile.in  base.cpp  base.h  mess.cpp  mess.h  val.cpp  val.h
src/moduls/arhiv/base/: Makefile.am  Makefile.in  base.cpp  base.h
src/moduls/bd/: CMakeLists.txt  Makefile  Makefile.am  Makefile.am1  Makefile.in  dbf.cpp  dbf.h  direct_dbf.cpp  direct_dbf.h  my_sql.cpp  my_sql.h  test_bd.cpp  test_bd.h  test_bd1.cpp  test_bd1.h  test_bd2.cpp  test_bd2.h
src/moduls/bd/=Tmpl=/: Makefile.am  configure.ac  mod_tmpl.cpp  mod_tmpl.h  module.cpp  module.h
src/moduls/bd/DBF/: Makefile.am  Makefile.in  dbf.cpp  dbf.h  dbf_mod.cpp  dbf_mod.h
src/moduls/bd/DBGate/: DBGate.cpp  DBGate.h  Makefile.am
src/moduls/bd/FireBird/: Makefile.am  Makefile.in  firebird.cpp  firebird.h
src/moduls/bd/LDAP/: Makefile.am  mod_ldap.cpp  mod_ldap.h
src/moduls/bd/MySQL/: Makefile.am  Makefile.in  my_sql.cpp  my_sql.h
src/moduls/bd/ODBC/: Makefile.am  odbc.cpp  odbc.h
src/moduls/bd/PostgreSQL/: Makefile.am  postgre.cpp  postgre.h
src/moduls/bd/SQLite/: CMakeLists.txt  Makefile.am  Makefile.in  bd_sqlite.cpp  bd_sqlite.h
src/moduls/bd/direct_dbf/: Makefile  Makefile.am  Makefile.in  dbf.cpp  dbf.h  direct_dbf.cpp  direct_dbf.h
src/moduls/bd/my_sql/: Makefile  Makefile.am  Makefile.in  my_sql.cpp  my_sql.h
src/moduls/bd/sqlite/: Makefile.am  Makefile.in  bd_sqlite.cpp  bd_sqlite.h
src/moduls/daq/: Makefile.am  Makefile.in
src/moduls/daq/=Tmpl=/: Makefile.am  configure.ac  configure.in  mod_tmpl.cpp  mod_tmpl.h  module.cpp  module.h
src/moduls/daq/AMRDevs/: Makefile.am  da.h  da_Ergomera.cpp  da_Ergomera.h  da_FlowTEC.cpp  da_FlowTEC.h  da_Kontar.cpp  da_Kontar.h  mod_amr.cpp  mod_amr.h
src/moduls/daq/BCM2835/: Makefile.am  bcm2835.c  bcm2835.h  module.cpp  module.h
src/moduls/daq/BFN/: Makefile.am  mod_BFN.cpp  mod_BFN.h
src/moduls/daq/BlockCalc/: Makefile.am  Makefile.in  block.cpp  block.h  virtual.cpp  virtual.h
src/moduls/daq/CIF/: Makefile.am  Makefile.in  cif_api.c  cif_dev_i.h  cif_types.h  cif_user.h  mod_cif.cpp  mod_cif.h  nodave.c  nodave.h  rcs_user.h  rcsdef.h
src/moduls/daq/Comedi/: Makefile.am  module.cpp  module.h
src/moduls/daq/DAQGate/: Makefile.am  Makefile.in  daq_gate.cpp  daq_gate.h
src/moduls/daq/DCON/: DCON_client.cpp  DCON_client.h  Makefile.am  Makefile.in
src/moduls/daq/DiamondBoards/: Makefile.am  Makefile.in  diamond.cpp  diamond.h  dscud.h
src/moduls/daq/EPICS/: Makefile.am  module.cpp  module.h
src/moduls/daq/FT3/: ACCOUNT.cpp  ACCOUNT.h  BIP.cpp  BIP.h  BTE.cpp  BTE.h  BTR.cpp  BTR.h  BUC.cpp  BUC.h  BVI.cpp  BVI.h  BVT.cpp  BVT.h  BVTC.cpp  BVTC.h  FT3_prt.cpp  FT3_prt.h  GKR.cpp  GKR.h  GNS.cpp  GNS.h  GZD.cpp  GZD.h  Makefile.am  ODOR.cpp  ODOR.h  PAUK.cpp  PAUK.h  TANK.cpp  TANK.h  da.cpp  da.h  mod_FT3.cpp  mod_FT3.h
src/moduls/daq/Fastwel/: Makefile.am  module.cpp  module.h
src/moduls/daq/Fastwell/: Makefile.am  module.cpp  module.h
src/moduls/daq/GPIO/: GPIO_module.cpp  GPIO_module.h  Makefile.am  da_BCM2835.cpp  da_BCM2835.h  da_SUNXI.cpp  da_SUNXI.h  gpio_lib.h
src/moduls/daq/ICP_DAS/: ICP_module.cpp  ICP_module.h  Makefile.am  Makefile.in  da.h  da_87x.cpp  da_87x.h  da_ISA.cpp  da_ISA.h  da_LP_8x.cpp  da_LP_8x.h
src/moduls/daq/JavaLikeCalc/: Makefile.am  Makefile.in  freefunc.cpp  freefunc.h  freelib.cpp  freelib.h  func_analise.ypp  virtual.cpp  virtual.h
src/moduls/daq/LogicLev/: Makefile.am  Makefile.in  (+2 more)
src/moduls/protocol/: Makefile  Makefile.am  Makefile.in  http.cpp  http.h  self.cpp  self.h  test_protocol.cpp  test_protocol.h
src/moduls/special/: Makefile  Makefile.am  Makefile.in  test_bd.cpp  test_bd.h  test_kernel.cpp  test_kernel.h  test_special.cpp  test_special.h  test_transp.cpp  test_transp.h  web_cfg.cpp  web_cfg.h  web_dbg.cpp  web_dbg.h  web_info.cpp  web_info.h
src/moduls/tcontr/: Makefile  Makefile.am  Makefile.in  sys.cpp  sys.h  test_tcontr.cpp  test_tcontr.h  virtual.cpp  virtual.h  virtual1.cpp  virtual1.h  virtual2.cpp  virtual2.h
src/moduls/transport/: Makefile  Makefile.am  Makefile.in  mail.cpp  mail.h  socket.cpp  socket.h  test_transport.cpp  test_transport.h
src/moduls/ui/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  qt_cfg.cpp  qt_cfg.h  qt_gui.cpp  qt_gui.h  test_gui.cpp  test_gui.h  web_cfg.cpp  web_cfg.h  web_dbg.cpp  web_dbg.h  web_info.cpp  web_info.h
src/po/: Makefile.am  Makefile.in  OpenScada.pot  de.po  openscada.pot  ru.po  uk.po
src_call/: CMakeLists.txt  Makefile.am  Makefile.in  main.cpp
(+1663 files in other folders)
